# shop-fastapi-vue

./: .dockerignore  .gitignore  .gitlab-ci.yml  Makefile  README.md  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml
.github/workflows/: deploy.yml
api/: .env.template  Dockerfile  alembic.ini  pyproject.toml  run.py  run_seed.py  test_commands.md
api/app/: .env.template  alembic.ini  config.py  db_helper.py  main.py
api/app/alembic/: env.py
api/app/alembic/versions/: 2025_12_09_1331-59dd9a92ec9e_all_table.py  2025_12_09_1627-350d99dc0e34_add_category_product_association_table.py  2025_12_09_1642-4345eff384bf_init.py  2025_12_10_0942-9625bca2f800_create_all_tables.py
api/app/core/: config.py
api/app/models/: __init__.py  base.py  category.py  category_product_association.py  product.py
api/app/repositories/: category_repository.py  product_repository.py
api/app/routes/: __init__.py  cart.py  categories.py  products.py
api/app/schemas/: category.py  product.py
api/app/seed/: categories.py  products.py
api/app/services/: cart_service.py  category_service.py  product_service.py
backend/: pyproject.toml
client/: .env.template  .prettierrc  Dockerfile  index.html  package.json  tsconfig.app.json  vite.config.ts
client/src/: App.vue
client/src/app/: App.vue  main.ts
client/src/components/: CartItem.vue  (+2 more)
docker/api/: .dockerignore  Dockerfile  Dockerfile.prod
docker/client/: Dockerfile  Dockerfile.prod
nginx/: nginx.conf  rootCA.conf
nginx/certs/: api.shop.local.crt  api.shop.local.key  shop.local.crt  shop.local.key
(+86 files in other folders)
